# watchermen

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.json  install.sh  main.cc  readme.md  vcpkg.json
cmake/: abseil-cpp.cmake  config.cmake  controller.cmake  import_dependency.cmake  protobuf.cmake
docs/: config center client.md  deployment.md  guide.md
src/app/include/process/: async_queue.h  config.h  configcenter_client.h  health_check.h  manager.h  process.h  process_http_helper.h
src/app/source/process/: async_queue.cc  config.cc  configcenter_client.cc  health_check.cc  manager.cc  process_http_helper.cc
